--- a/lending.ipynb
+++ b/lending.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,19 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Xtr = Xtr[:30000]\n",
-    "Ytr = Ytr[:30000]\n",
-    "#Xts = Xts[:1000]\n",
-    "#Yts = Yts[:1000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +43,7 @@
        "              n_estimators=10000)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 65.3179%, Balanced Accuracy: 65.3948%\n"
+      "Accuracy: 65.9944%, Balanced Accuracy: 66.0154%\n"
      ]
     }
    ],
@@ -88,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "params: 10241\n"
+      "params: 3073\n"
      ]
     }
    ],
@@ -103,7 +91,7 @@
     "torch.manual_seed(13)\n",
     "\n",
     "per_layer_lip = 2\n",
-    "width = 64\n",
+    "width = 32\n",
     "\n",
     "class Model(torch.nn.Module):\n",
     "  def __init__(self, width, robust=False, sigma=False):\n",
@@ -123,7 +111,6 @@
     "      direct_norm(torch.nn.Linear(width, width), kind=\"inf\", alpha=per_layer_lip),\n",
     "      activation(),\n",
     "      direct_norm(torch.nn.Linear(width, 1), kind=\"inf\", alpha=per_layer_lip),\n",
-    "      #direct_norm(mup.MuReadout(width, 1), kind=\"inf\", alpha=per_layer_lip),\n",
     "    )\n",
     "    if sigma:\n",
     "      self.nn = torch.nn.Sequential(\n",
@@ -134,70 +121,27 @@
     "  def forward(self, x):\n",
     "    return self.nn(x)\n",
     "\n",
-    "# base = Model(1, robust=True, sigma=True)\n",
-    "# delta = Model(2, robust=True, sigma=True)\n",
     "model = Model(width, robust=True, sigma=True)\n",
-    "#mup.set_base_shapes(model, base, delta=delta)\n",
     "\n",
-    "# for param in model.parameters():\n",
-    "#     ### If initializing manually with fixed std or bounds,\n",
-    "#     ### then replace with same function from mup.init\n",
-    "#     # torch.nn.init.uniform_(param, -0.1, 0.1)\n",
-    "#     mup.init.uniform_(param, -0.1, 0.1)\n",
-    "#     ### Likewise, if using\n",
-    "#     ###   `xavier_uniform_, xavier_normal_, kaiming_uniform_, kaiming_normal_`\n",
-    "#     ### from `torch.nn.init`, replace with the same functions from `mup.init`\n",
     "\n",
     "\n",
     "model = model.to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
     "print('params:', sum(p.numel() for p in model.parameters()))\n",
-    "#scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=.999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model(\n",
-      "  (nn): Sequential(\n",
-      "    (0): SigmaNet(\n",
-      "      (nn): Sequential(\n",
-      "        (0): Linear(in_features=28, out_features=64, bias=True)\n",
-      "        (1): GroupSort(num_groups: {self.n_groups})\n",
-      "        (2): Linear(in_features=64, out_features=64, bias=True)\n",
-      "        (3): GroupSort(num_groups: {self.n_groups})\n",
-      "        (4): Linear(in_features=64, out_features=64, bias=True)\n",
-      "        (5): GroupSort(num_groups: {self.n_groups})\n",
-      "        (6): Linear(in_features=64, out_features=1, bias=True)\n",
-      "      )\n",
-      "    )\n",
-      "    (1): Sigmoid()\n",
-      "  )\n",
-      ")\n"
-     ]
-    }
-   ],
-   "source": [
     "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss: 0.6380 0.6685, acc: 0.6483: 100%|██████████| 1000/1000 [08:25<00:00,  1.98it/s]\n"
+      "Loss: 0.6306 0.6356, acc: 0.6525, max_acc: 0.6528:   4%|▍         | 44/1000 [02:51<1:04:05,  4.02s/it]"
      ]
     }
    ],
@@ -221,8 +165,9 @@
     "\n",
     "\n",
     "dataloader = torch.utils.data.DataLoader(torch.utils.data.TensorDataset(Xtrt, Ytrt), batch_size=int(2**9), shuffle=True)\n",
+    "max_acc = 0\n",
     "\n",
-    "bar = tqdm(range(1000))\n",
+    "bar = tqdm(range(100))\n",
     "for i in bar:\n",
     "  for Xi, yi in dataloader:\n",
     "    y_pred = model(Xi)\n",
@@ -239,15 +184,10 @@
     "      acc = 0\n",
     "      for i in np.linspace(0, 1, 50):\n",
     "        acc = max(acc, accuracy_score(Ytst.cpu().numpy(), y_predts.cpu().numpy()>i))\n",
-    "    bar.set_description(f'Loss: {losstr.item():.4f} {lossts.item():.4f}, acc: {acc.item():.4f}')"
+    "\n",
+    "    max_acc = max(max_acc, acc)\n",
+    "    bar.set_description(f'Loss: {losstr.item():.4f} {lossts.item():.4f}, acc: {acc.item():.4f}, max_acc: {max_acc:.4f}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
